# isports-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/isports/: __init__.py  client.py  exceptions.py  http.py
src/isports/basketball/: __init__.py
src/isports/football/: __init__.py
tests/: __init__.py  test_basketball.py  test_client.py  test_football.py  test_http.py
